Add basic Loan Info

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,17 @@
 <resources>
     <string name="app_name">Lender</string>
     <string name="action_settings">Settings</string>
+
+
+    <string name="month">(Months)</string>
+    <string name="amount">Amount*</string>
+    <string name="anual_rate">Rate*</string>
+    <string name="term">Term*</string>
+
+    <string name="calculate">Calculate</string>
+    <string name="generate">generate</string>
+    <string name="loan_info">Loan Info</string>
+    <string name="cancel">Cancel</string>
+    <string name="rate_sign">%</string>
+
 </resources>
